# codeofsnakeweb

./: AddressBook.py  Address_bot.puml  Bot.py  Dockerfile  README.md  __main_.py  app.py  helper.py  index.html  info.py  my_logger.py  note.py  pyproject.toml  requirements.txt  setup.py  sort.py
CoderOfSnake.egg-info/: SOURCES.txt  top_level.txt
templates/: index.html
