[tool.poetry]
name = "codesnake"
version = "0.1.0"
description = "poetry for ChartBot"
authors = ["Iuliia Shyshyk <oiseua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
